<resources>
    <string name="app_name">DRONE42</string>
    <string name="title_activity_demo">GSDemoActivity</string>
    <string name="google_app_id">Google_App_ID_String</string>
    <string name="btn_save">Save</string>
    <string name="btn_locate">Locate</string>
    <string name="btn_add">Add</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_config">Config</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="main_title">Google Maps  Demo</string>
    <string name="tilte_waypoint_configuration">Waypoint Configuration</string>
    <string name="label_altitude">Altitude:</string>
    <string name="label_speed">Speed:</string>
    <string name="radio_none">None</string>
    <string name="radio_gohome">GoHome</string>
    <string name="radio_autoland">AutoLand</string>
    <string name="radio_backto_1st">BackTo 1st</string>
    <string name="label_heading">Heading:</string>
    <string name="radio_auto">Auto</string>
    <string name="btn_initial">Initial</string>
    <string name="radio_rc_control">RC Control</string>
    <string name="radio_use_waypoint">Use Waypoint</string>
    <string name="radio_low">Low</string>
    <string name="radio_mid">Mid</string>
    <string name="radio_high">High</string>
    <string name="label_action_after_finished">Action After Finished:</string>
    <string name="dialog_finish">Finish</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="status_no_product_connected">Status: No Product Connected</string>
    <string name="btn_open">Open</string>
    <string name="title_connection">App Dji Google</string>
    <string name="set_way_point_successfully">Set Waypoint attitude successfully</string>
    <string name="load_waypoint_succeeded">loadWaypoint succeeded</string>
    <string name="load_waypoint_failed">loadWaypoint failed</string>
    <string name="mission_upload_successfully">Mission upload successfully</string>
    <string name="mission_upload_failed">Mission upload failed, error</string>
    <string name="retrying">retrying</string>
    <string name="successfully">Successfully</string>
    <string name="mission_start">Mission Start</string>
    <string name="mission_stop">Mission Stop</string>
    <string name="marker_in">Marker in Agro42</string>
    <string name="register_success">Register Success</string>
    <string name="register_sdk_fails">Register sdk fails</string>
    <string name="check_network_available">check network is available</string>
    <string name="check_permissions_granted">Por favor, verifique se a permissão é concedida.</string>
    <string name="registering">registering</string>
    <string name="please_wait">Please Wait</string>
    <string name="product_disconect">Product Disconnected</string>
    <string name="product_conected">Product Connected</string>
    <string name="status">Status</string>
    <string name="connected">connected</string>
    <string name="executation_finished">Execution finished</string>
    <string name="add_waypoint_cannot">Cannot Add Waypoint</string>

</resources>
