<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tilte_waypoint_configuration"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_altitude"></TextView>

        <EditText
            android:id="@+id/altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType=""></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_speed"></TextView>

        <RadioGroup
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_low" />

            <RadioButton
                android:id="@+id/MidSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mid" />

            <RadioButton
                android:id="@+id/HighSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_high" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_action_after_finished"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/actionAfterFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/finishNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_none"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishGoHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_gohome"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishAutoLanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_autoland"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_backto_1st"
                android:textSize="5pt" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_heading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/headingNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_auto"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingInitDirec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_initial"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_rc_control"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingWP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_use_waypoint"
                android:textSize="5pt" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>